fix(styling): fixed styling and scrollbars on all web browsers to be cross-browser compatible

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,26 @@
 .electrolize {
   font-family: 'Electrolize';
 }
+
+ /* For WebKit (Safari, Chrome) browsers */
+ ::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
